💄 fix: some padding adjustments and scrollbar in mobile view

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 0.5rem;
+  width: 0.4rem;
   height: 1rem;
 }
 
